<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/share_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/share_text_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="9"
            android:hint="@string/please_input_share_info">
        </EditText>
        <Button
            android:id="@+id/parse_share_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/operation_parse"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/share_option_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/stop_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/operation_stop_service" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="关于"/>
                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp"/>
                    <Button
                        android:id="@+id/open_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="设置"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/open_douyin_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/operation_start_douyin_app"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp"/>
                <Button
                    android:id="@+id/open_kuaishou_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/operation_start_kuaishou_app"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>